--- a/assets/assets/TIL/flutter-2020-07-06.md
+++ b/assets/assets/TIL/flutter-2020-07-06.md
@@ -8,21 +8,21 @@ Why? 😕 흠 그건 좀... ( 다른 프레임워크 쓰세요... )
 
 저는 반드시 flutter 를 이용해서 blog 를 만들고 싶었기 때문에 이 방법을 사용했습니다. 👍
 
----  
+---
 
-Service 구성하기  
-~~~~
-* Networking Class
-* File Class
+Service 구성하기
 
----  
+- Networking Class
+- File Class
+
+---
   
-### Networking Class  
+### Networking Class   
   
 ```  
-import 'package:http/http.dart' as http;  
-  
-class NetWorkHelper {  
+import 'package:http/http.dart' as http;
+
+class NetWorkHelper {
   NetWorkHelper(this.url);
   final String url;
 
@@ -38,8 +38,8 @@ class NetWorkHelper {
 }  
 ```  
   
-### File Class  
-
+### File Class
+  
 ```  
 import 'networking.dart';
 
@@ -53,12 +53,12 @@ class FileModel {
     var fileData = await netWorkHelper.getData();
     return fileData;
   }
-}  
+}
 ```  
-
+  
 이를 이용해서 [flutter_markdown package](https://pub.dev/packages/flutter_markdownhttps://pub.dev/packages/flutter_markdown) 를 사용해 연동을 해주면 블로그 포스팅이 가능한 flutter base github blog 가 완성이 된다.  
-
+  
 ---  
-
-아직 Flutter Web 은 외면 받고 있는 것이 현실이지만, 언젠간 떡상할 수 있을 것이라 예상한다!  
+  
+아직 Flutter Web 은 외면 받고 있는 것이 현실이지만, 언젠간 떡상할 수 있을 것이라 예상한다!   
 Flutter 기반 블로그를 만들면서 느낀점은 아무리 구현이 안되도 어떻게든 구현이 되게 할 수 있다는 것. 물론 좀 돌아간다는 면이 있기는 하지만, 괜찮다. 그것이 성장하는 길이니 ...🚀️  
