--- a/assets/assets/TIL/flutter-2020-07-06.md
+++ b/assets/assets/TIL/flutter-2020-07-06.md
@@ -19,7 +19,7 @@ Service 구성하기
   
 ### Networking Class   
   
-```  
+```  dart
 import 'package:http/http.dart' as http;
 
 class NetWorkHelper {
@@ -40,7 +40,7 @@ class NetWorkHelper {
   
 ### File Class
   
-```  
+```  dart
 import 'networking.dart';
 
 const githubBlogURL = 'https://raw.githubusercontent.com/krumaska/flutter_blog/master/';
