flutter blog update

--- a/assets/assets/TIL/2020-07-20-flutter.md
+++ b/assets/assets/TIL/2020-07-20-flutter.md
@@ -1,45 +1,57 @@
 # Flutter Web Blog dart:io 극복하기 2 🚀️ 🚀️
-
+` `  
+` `  
 > dart library 인 dart:io 의 미지원으로 flutter blog 만들기에 진전이 없었다.
 
-이 위에 대한 아이디어로 HTTP Request 를 사용해서 md file의 내용을 받아오려고 했다. (하위 폴더 파일 리스트까지... html파싱으로 받아오려고함)
+` `  
+` `  
+이 위에 대한 아이디어로 HTTP Request 를 사용해서 md file의 내용을 받아오려고 했습니다. (하위 폴더 파일 리스트까지... html파싱으로 받아오려고함)
 
-하지만 그것은 너무... 바보 같은 짓이였다. 😕 👎
+하지만 그것은 너무... 바보 같은 짓이였죠. 😕 👎
 
-다시 파일을 읽기 위한 방법을 다시 생각해봤는데 총 2가지의 방법이 있었다.
-
+다시 파일을 읽기 위한 방법을 다시 생각해봤는데 총 2가지의 방법이 있었습니다.  
+` `  
+` `  
 ## 2가지 방법
 
 - HTTP Request 사용하기
 - rootBundle 사용하기
 
+` `  
+` `  
 ## HTTP Request 사용하기
 
-순서는 다음과 같다.
+순서는 다음과 같습니다.
 
 1. md 형식이 업로드된 파일폴더까지 github 주소로 HTTP Request
 2. HTTP Request 를 통해 얻은 데이터를 html parser를 이용하여 파일리스트를 가져오기
 3. 파일리스트수 만큼 github raw 주소로 한번 더 HTTP Request
 4. blog 화면에 반영
 
+` `  
+` `  
 ## rootBundle 사용하기
 
-md 파일을 반영해줄 기능을 찾던 도중 [refined_markdown](https://pub.dev/packages/refined_markdown/example) 예제에서 **rootBundle** 을 사용하여 assets 파일접근을 하는 코드를 보았다.
+md 파일을 반영해줄 기능을 찾던 도중 [refined_markdown](https://pub.dev/packages/refined_markdown/example) 예제에서 **rootBundle** 을 사용하여 assets 파일접근을 하는 코드를 보았습니다.
 
-이로 인해 망설임없이 **rootBundle** 를 이용해서 다음 순서와 같이 생각해보았다.
+이로 인해 망설임없이 **rootBundle** 를 이용해서 다음 순서와 같이 생각해보았습니다.
 
 1. HTTP Request 로 파일리스트를 불러온다.
 2. 파일리스트를 바탕으로 **rootBundle** 을 사용하여 md 파일의 내용을 가져온다.
 3. blog 화면에 반영
 
+` `  
+` `  
 ## 고민에 빠지는 나 ...
 
-우선적으로 2번의 방법인 **rootBundle 사용하기**가 가장 베스트였다.
+우선적으로 2번의 방법인 **rootBundle 사용하기**가 가장 베스트였습니다.
 
-근데 어떤 경우에나 파일리스트를 불러오기 위해서는 웹 요청을 써야했고 솔직히 말해서 웹 요청을 쓰긴 싫었다. 👎 (CORS 문제도 발생 ㅠㅠ)
+근데 어떤 경우에나 파일리스트를 불러오기 위해서는 웹 요청을 써야했고 솔직히 말해서 웹 요청을 쓰긴 싫었죠. 👎 (CORS 문제도 발생 ㅠㅠ)
 
-그래서 한번 ~~미친짓~~을 아래과정과 같이 해보려고 했다.
+그래서 한번 ~~미친짓~~을 아래과정과 같이 해보려고 했습니다...
 
+` `  
+` `  
 ## 현재 날짜까지 모든 파일 존재 유무 확인
 
 제목만 봐도 무서운 말...
@@ -61,23 +73,27 @@ Future fileExist(String path) async {
 
 이렇게 파일 함수를 만들어 모든 날짜에 대한 파일 유무를 확인하려고 했지만 ... ~~컴퓨터의 비명소리가 들려 안하기로 했다...~~
 
-## 타협점을 찾다.
+` `  
+` `  
+## 타협점을 찾다
 
-> 결국 수동 작성으로 가기로 했다.
+> 결국 수동 작성으로 가기로 했습니다.
 
-dart:io 를 해결해 줄 대항마, [fs_shim](https://pub.dev/packages/fs_shim) 이 존재했지만 계속 `No such file or directory` 파일 경로를 찾을 수 없다는 말에 포기하고 말았다.
+dart:io 를 해결해 줄 대항마, [fs_shim](https://pub.dev/packages/fs_shim) 이 존재했지만 계속 `No such file or directory` 파일 경로를 찾을 수 없다는 말에 포기하고 말았죠.
 
-Google 과 함께 이 문제를 찾던 도중, [[web]: How to find an example of AssetManifest.json?](https://github.com/flutter/flutter/issues/33402) 라는 제목으로 여러개의 이미지 파일 목록을 불러오는 댓글 코드가 있었다.
+Google 과 함께 이 문제를 찾던 도중, [[web]: How to find an example of AssetManifest.json?](https://github.com/flutter/flutter/issues/33402) 라는 제목으로 여러개의 이미지 파일 목록을 불러오는 댓글 코드가 있었습니다.
 
-🎉️ 그래! 이거다 하고 바로 `TIL.json` 파일을 생성해서 json 포맷으로 md 파일 목록을 수동으로 추가해줬다.
+🎉️ 그래! 이거다 하고 바로 `TIL.json` 파일을 생성해서 json 포맷으로 md 파일 목록을 수동으로 추가해줬습니다.
 
-이 방법이 가장 옳았다.
+이 방법이 가장 옳았습니다.
 
-참고로 `AssetManifest.json` 은 `pubsepc.yaml ` 대신에 필요한 파일들이 정의되버리기 때문에 AssetManifest 이름은 피하고 TIL 설정이니 TIL로 갔다.
+참고로 `AssetManifest.json` 은 `pubsepc.yaml ` 대신에 필요한 파일들이 정의되버리기 때문에 AssetManifest 이름은 피하고 TIL 설정이니 TIL로 갔다는 점.
 
+` `  
+` `  
 ## 마무리
 
-결국 나의 flutter 기반 깃허브 블로그는 md 파일을 읽어올 때 다음과 같은 방식을 따른다.
+결국 저의 flutter 기반 깃허브 블로그는 md 파일을 읽어올 때 다음과 같은 방식을 따릅니다.
 
 1. assets/TIL/TIL.json 에 위치한 파일목록을 가져온다.
 2. TIL.json 파일에 기술되어있는 파일 목록을 가져와서 `String data = await rootBundle.loadString('assets/TIL/$fileName');` 파일을 문자열로 저장한다.
@@ -85,6 +101,6 @@ Google 과 함께 이 문제를 찾던 도중, [[web]: How to find an example of
 
 ---
 
-거의 완성이 되었다. 추가적으로 언어별 혹은 주제별로 글을 묶어보는 것만 남았다.
+거의 완성이 되었고 추가적으로 언어별 혹은 주제별로 글을 묶어보는 것만 남았네요.
 
-Flutter Web 정말 재밌다.
+Flutter Web 정말 재밌습니다 여러분도 해보세요!
