--- a/assets/assets/TIL/2020-07-06-flutter.md
+++ b/assets/assets/TIL/2020-07-06-flutter.md
@@ -1,18 +1,24 @@
 # Flutter Web Blog dart:io 극복하기 🚀️ 🚀️
-
+` `  
+` `  
 > dart library 인 dart:io 의 미지원으로 flutter blog 만들기에 진전이 없었다.
 
+` `  
+` `  
 이 위에 대한 아이디어가 떠올랐는데 바로 플러터의 [http](https://pub.dev/packages/http) Package를 이용하는 것.
 
 Why? 😕 흠 그건 좀... ( 다른 프레임워크 쓰세요... )
 
-저는 반드시 flutter 를 이용해서 blog 를 만들고 싶었기 때문에 이 방법을 사용했습니다. 👍  
-
-  
+저는 반드시 flutter 를 이용해서 blog 를 만들고 싶었기 때문에 이 방법을 사용했습니다. 👍    
+` `  
+` `  
 ## Service 구성  
 - Networking Class  
 - File Class  
-## Networking Class   
+
+` `  
+` `  
+### Networking Class   
   
 ```  dart
 import 'package:http/http.dart' as http;
@@ -32,8 +38,8 @@ class NetWorkHelper {
   }
 }  
 ```  
-  
-## File Class
+
+### File Class
   
 ```  dart
 import 'networking.dart';
@@ -50,7 +56,8 @@ class FileModel {
   }
 }
 ```  
-  
+` `  
+` `  
 이를 이용해서 [flutter_markdown](https://pub.dev/packages/flutter_markdown) Package를 사용해 연동을 해주면 블로그 포스팅이 가능한 플러터 기반 Github Blog 완성!
 
 ---   
