--- a/assets/assets/TIL/2020-11-11-flutter.md
+++ b/assets/assets/TIL/2020-11-11-flutter.md
@@ -1,24 +1,17 @@
 # Flutter List View Animation 공부
-` `  
-` `  
-> List View 가 표시가 될 때 아무런 효과 없이 바로 나타나는게 부자연스러워서 플러터 스터디를 통해 적용해보기로 했습니다.
 
-` `  
-` `  
-Flutter를 계속해서 해오고 있지만, 애니메이션에 관하여 다뤄본 적이 없기 때문에 스터디 때 메모리앱에 적용을 시켜보았습니다.
+> List View 가 표시가 될 때 아무런 효과 없이 바로 나타나는게 부자연스러워서 플러터 스터디를 통해 적용해보기로 했다.
 
-` `  
-` `  
+Flutter를 계속해서 해오고 있지만, 애니메이션에 관하여 다뤄본 적이 없기 때문에 스터디 때 메모리앱에 적용을 시켜보았다.
+
 ## ListView의 ListView Generate
 
 **ListView Generate** 이녀석은 `ListView`에 children `List.generate` 로 작성한다.
 
-아래 코드는 [flutter-where-limit-study](https://github.com/krumaska/flutter-where-limit-study) 에서 작성한 코드입니다.
+아래 코드는 [flutter-where-limit-study](https://github.com/krumaska/flutter-where-limit-study) 에서 작성한 코드이다.
 
-기본적인 작성법은 다음과 같습니다.
+기본적인 작성법은 다음과 같다.
 
-` `  
-` `  
 ```dart
 ListView(
     children: List.generate(
@@ -34,20 +27,14 @@ ListView(
     ),
 );
 ```
-` `  
-` `  
-위 코드를 보면 알겠지만, `List.generate` 위젯은 위젯의 길이인 `length` 와 `widget function` 을 파라매터 값으로 전달 받는다. 이를 통해 각 위젯의 `index` 값을 알려줍니다.
+위 코드를 보면 알겠지만, `List.generate` 위젯은 위젯의 길이인 `length` 와 `widget function` 을 파라매터 값으로 전달 받는다. 이를 통해 각 위젯의 `index` 값을 알려준다.
 
-`index` 값을 이용하면 `StatefulWidget` 으로 구성한 `MemoryBox` Component 를 순차적으로 지연시켜서 애니메이션을 플레이 시킬 수 있습니다.
+`index` 값을 이용하면 `StatefulWidget` 으로 구성한 `MemoryBox` Component 를 순차적으로 지연시켜서 애니메이션을 플레이 시킬 수 있다.
 
-` `  
-` `  
 ## 그렇다면 애니메이션 플레이는 언제 하는가?
 
-`List.genrate` 위젯이 `MemoryBox` 위젯을 순차적으로 콜할 때 `Memory Box` 위젯에서 `initState` 함수를 `@override` 해서 함수안에 특정 코드를 작성해주면 됩니다.
+`List.genrate` 위젯이 `MemoryBox` 위젯을 순차적으로 콜할 때 `Memory Box` 위젯에서 `initState` 함수를 `@override` 해서 함수안에 특정 코드를 작성해주면 된다.
 
-` `  
-` `  
 ```dart
   bool _animate = false;
   bool _isStart = true;
@@ -66,12 +53,9 @@ ListView(
         : _animate = true;
   }
 ```
-` `  
-` `  
-이후 `Widget build` 쪽에서는 다음과 같이 작성하면 됩니다.
 
-` `  
-` `  
+이후 `Widget build` 쪽에서는 다음과 같이 작성하면 된다.
+
 ```dart
 return AnimatedOpacity(
     duration: Duration(milliseconds: 1000),
@@ -86,10 +70,8 @@ return AnimatedOpacity(
 );
 ```
 
-` `  
-이렇게 코드를 작성해주면, 아주 예쁜 앱이 탄생합니다!
+이렇게 코드를 작성해주면, 아주 예쁜 앱이 탄생한다!
 
 ---
-
 
 참고사이트 - [Animate elements in ListView on initialization](https://stackoverflow.com/questions/59512344/animate-elements-in-listview-on-initialization)
